--- a/symmetrical-bassoon-main/Develop/public/manifest.json
+++ b/symmetrical-bassoon-main/Develop/public/manifest.json
@@ -29,16 +29,20 @@
         "src": "assets/icons/icon_96x96.png",
         "sizes": "96x96",
         "type": "image/png"
+      },
+      {
+        "src": "assets/icons/icon_72x72.png",
+        "sizes": "72x72",
+        "type": "image/png"
       }
+
     ],
-    "name": "Food Event",
-    "short_name": "Foodies",
-    "orientation": "portrait",
+    "name": "Budget Tracker Application",
+    "short_name": "Budget Tracker",
     "display": "standalone",
-    "start_url": "../index.html",
-    "description": "An app that allows you to view upcoming food events.",
-    "background_color": "#01579b",
-    "theme_color": "#ffffff"
+    "start_url": "/",
+    "background_color": "#ffffff",
+    "theme_color": "#317efb"
   }
 
   
